# AllegroExt

./: .gitignore  AllegroExt.sln  CMakeLists.txt  README.md
AllegroExt/: AllegroExt.vcxproj  AllegroExt.vcxproj.filters  AllegroRelease.props  Button.h  Core.cpp  Core.h  DefaultLoadSign.cpp  DefaultLoadSign.h  DisplayManager.cpp  DisplayManager.h  FPSLogger.cpp  FPSLogger.h  Image.cpp  Image.h  InputManager.cpp  InputManager.h  LoadSign.cpp  LoadSign.h  MLScreenText.h  Makelib  Music.h  ReadMe.txt  ScreenText.cpp  ScreenText.h  ShapeRenderer.cpp  ShapeRenderer.h  SoundEffect.h  SoundManager.cpp  SoundManager.h  TextField.cpp  TextField.h  allegro(x64).props
src/: Button.cpp  DefaultLoadSign.cpp  MLScreenText.cpp  Music.cpp  ScreenText.cpp  SoundEffect.cpp  SoundManager.cpp
